--- a/src/components/index.module.css
+++ b/src/components/index.module.css
@@ -5,8 +5,21 @@ h1 {
     justify-content: center;
 }
 
+.head-text {
+    position: relative;
+}
+
+.text-on-image {
+    position: absolute;
+    right: 50%;
+    left: 50%;
+    bottom: 15%;
+    
+}
+
 h2 {
     margin-top: 5%;
+    
     display: flex;
     text-align: center;
     justify-content: center;
@@ -20,6 +33,7 @@ h3 {
     font-size: small;
 
 }
+
 
 .aboveFooter {
     margin-top: 1rem;
