--- a/src/components/index.module.css
+++ b/src/components/index.module.css
@@ -1,8 +1,11 @@
 h1 {
-    margin-top: 5%;
-    display: flex;
+    position: absolute;
+    top: 30%;
+    font-size: xxx-large;
+    width: 100%;
     text-align: center;
-    justify-content: center;
+  
+ 
 }
 
 .head-text {
@@ -51,7 +54,6 @@ button {
     background-color: #2d68de;
     border: none;
     color: white;
-    
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -78,10 +80,7 @@ button:hover {
 }
 
 .logo-bottom {
-    display: block;
+    width: 100%;
     padding-top: 50%;
-    margin: 0 auto;
-    
-    
+ 
 }
-
