--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -59,9 +59,10 @@
 
 
 
-// Globalw
-@import './fonts';
+// Global
 @import './layouts';
+@import './fonts';
 
 // Components
 @import './components/header';
+@import './components/herobanner';
