--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -60,9 +60,10 @@
 //  55. Top Bar
 //  56. Xy Grid
 
-// @import 'util/util';
-// @import '../../../node_modules/foundation-sites/scss/util/util';
 @import '~foundation-sites/scss/util/util';
+
+// font-family: 'Quicksand', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 // 1. Global
 // ---------
@@ -84,14 +85,14 @@ $black: #0a0a0a;
 $white: #ffffff;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: 'Quicksand', sans-serif;
 $body-safe-padding: false;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
 $global-position: 1rem;
-$global-weight-normal: normal;
-$global-weight-bold: bold;
+$global-weight-normal: 500;
+$global-weight-bold: 800;
 $global-radius: 0;
 $global-menu-padding: 0.7rem 1rem;
 $global-menu-nested-margin: 1rem;
