--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -70,7 +70,7 @@
 
 $global-font-size: 100%;
 $global-width: rem-calc(1200);
-$global-lineheight: 1.5;
+$global-lineheight: 1.6;
 $foundation-palette: (
   primary: #1779ba,
   secondary: #767676,
@@ -78,6 +78,7 @@ $foundation-palette: (
   warning: #ffae00,
   alert: #cc4b37,
 );
+$gradient: linear-gradient(#0098EE, #0072F8);
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
@@ -147,7 +148,7 @@ $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
 $header-color: inherit;
-$header-lineheight: 1.4;
+$header-lineheight: 1.3;
 $header-margin-bottom: 0.5rem;
 $header-styles: (
   small: (
