--- a/src/assets/sass/components/_footer.scss
+++ b/src/assets/sass/components/_footer.scss
@@ -2,6 +2,7 @@
     bottom: 0;
     width: 100%;
     height: 4rem;
-    
-    
+    display: grid;
+    place-items: center;
+    background: gray;
 }
