--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -67,3 +67,4 @@
 @import './components/header';
 @import './components/aboveFooter';
 @import './components/footer';
+@import './components/herobanner';
