--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -68,3 +68,4 @@
 @import './components/aboveFooter';
 @import './components/footer';
 @import './components/herobanner';
+@import './components/login'
