--- a/src/assets/sass/components/_aboveFooter.scss
+++ b/src/assets/sass/components/_aboveFooter.scss
@@ -1,19 +1,28 @@
 .aboveFooter {
     background: rgb(255, 255, 255);
+    
     .logo-bottom {
-        color: red;
+        opacity: 0.7;
+        margin-top: 50px;    
+        margin-bottom: -30px;
+        z-index: 0;
+        
     }
     .button {
+        background-image: linear-gradient(to right, #0098EE 0%, #0085F3  51%, #0072F8  100%);
         &:hover{
             opacity: 0.4;
         }
         
     }
-
-    padding-top: 50px;
+    h4 {
+        z-index: 1;
+    }
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-bottom: 0;
+    padding-top: 200px;
     
 }
