--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -68,3 +68,6 @@
 @import './components/aboveFooter';
 @import './components/footer';
 @import './components/herobanner';
+
+// Pages
+@import './components/rent';
