--- a/src/assets/sass/_fonts.scss
+++ b/src/assets/sass/_fonts.scss
@@ -2,7 +2,11 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: -0.02em;
 }
 
-.sub-title {
+p {
+  font-size: 16px;
+}
+
+.gradient-text {
   background: $gradient;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
