--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -79,10 +79,10 @@ $foundation-palette: (
   alert: #cc4b37,
 );
 $gradient: linear-gradient(#0098EE, #0072F8);
-$light-gray: #e6e6e6;
+$light-gray: #BDC0C5;
 $medium-gray: #cacaca;
-$dark-gray: #8a8a8a;
-$black: #0a0a0a;
+$dark-gray: #59626D;
+$black: #292D33;
 $white: #ffffff;
 $body-background: $white;
 $body-font-color: $black;
@@ -147,7 +147,7 @@ $header-font-family: $body-font-family;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
-$header-color: inherit;
+$header-color: $black;
 $header-lineheight: 1.3;
 $header-margin-bottom: 0.5rem;
 $header-styles: (
@@ -160,10 +160,10 @@ $header-styles: (
     'h6': ('font-size': 16),
   ),
   medium: (
-    'h1': ('font-size': 48),
-    'h2': ('font-size': 40),
-    'h3': ('font-size': 31),
-    'h4': ('font-size': 25),
+    'h1': ('font-size': 40),
+    'h2': ('font-size': 36),
+    'h3': ('font-size': 28),
+    'h4': ('font-size': 24),
     'h5': ('font-size': 20),
     'h6': ('font-size': 16),
   ),
