Major work on map with markers, navigation to rent and displaying of correct car on rent

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -68,7 +68,8 @@
 @import './components/aboveFooter';
 @import './components/footer';
 @import './components/herobanner';
+@import './components/map';
 
 // Pages
 @import './components/rent';
-@import './components/login'
+@import './components/login';
