--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -71,4 +71,5 @@
 
 // Pages
 @import './components/rent';
-@import './components/login'
+@import './components/login';
+@import './components/isRenting';
