--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -17,6 +17,10 @@
     justify-content: space-between;
     padding: 10px 0;
 
+    & > div:hover {
+        cursor: pointer;
+    }
+
     .menu-icon,
     .user-icon {
       width: 36px;
