--- a/src/assets/sass/components/_login.scss
+++ b/src/assets/sass/components/_login.scss
@@ -1,31 +1,30 @@
-.shit {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20vh;
+.login-page {
+    .login-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 30vh;
+
+        .login-button {
+            background-image: linear-gradient(to right, #0072ff 0%, #00c6ff 51%, #0072ff 100%);
+            margin: 10px;
+            padding: 15px 45px;
+            text-align: center;
+            text-transform: uppercase;
+            transition: 0.5s;
+            background-size: 200% auto;
+            color: white;
+            box-shadow: 0 0 20px #eee;
     
-}
-
-
-.loginButton {
-     
-      background-image: linear-gradient(to right, #0072ff 0%, #00c6ff  51%, #0072ff  100%);
-      margin: 10px;
-      padding: 15px 45px;
-      text-align: center;
-      text-transform: uppercase;
-      transition: 0.5s;
-      background-size: 200% auto;
-      color: white;            
-      box-shadow: 0 0 20px #eee;
-      
-      display: block;
-
-      &:hover {
-        background-position: right center; /* change the direction of the change here */
-        color: #fff;
-        text-decoration: none;
+            display: block;
+    
+            &:hover {
+                background-position: right center;
+                color: #fff;
+                text-decoration: none;
+                cursor: pointer;
+            }
         }
-
+    }
 }
