--- a/src/assets/sass/components/_map.scss
+++ b/src/assets/sass/components/_map.scss
@@ -2,6 +2,7 @@
     height: 80vh;
     width: 100vw;;
     position: relative;
+    overflow:hidden;
     top: 0;
     left: 0;
 
@@ -12,15 +13,81 @@
     }
 
     .marker-info {
+        border-radius: 4px;
+        background: $white;
         position: absolute;
-        bottom: 0px;
-        right: 0px;
-        transform: translate(-20px, -20px);
-
+        bottom: 0;
+        right: 0;
+        max-width: 100%;
+        margin: 20px;
         width: 400px;
-        height: 300px;
-        background-color: blue;
-        color: white;
+        padding: 16px;
+        box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.24);
+        @include breakpoint(small down) {
+          margin: 12px;
+          width: calc(100% - 2*12px);
+        }
+        img {
+          position: absolute;
+          width: 200px;
+          height: auto;
+          top: 0;
+          right: 20px;
+          transform: translate(0, -50%);
+        }
+        .title-group {
+          .license {
+            color: $dark-gray;
+            margin-bottom: 4px;
+          }
+          .title {
+            font-weight: 700;
+            font-size: 20px;
+            @include breakpoint(medium) {
+              font-size: 22px;
+            }
+            margin-bottom: 1rem;
+          }
+        }
+        .button {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 0;
+          span {
+            font-weight: 500;
+          }
+        }
+        .stats {
+          display: flex;
+          margin-bottom: 1rem;
+          .stat {
+            &:not(:last-child) {
+              margin-right: 30px;
+              position: relative;
+
+              &:before {
+                content: '';
+                width: 1px;
+                top: 10%;
+                height: 80%;
+                position: absolute;
+                right: -15px;
+                background: $light-gray;
+                opacity: .5;
+              }
+            }
+            p:first-child {
+              color: $light-gray;
+            }
+            p:last-child {
+              font-weight: 600;
+              color: $dark-gray;
+            }
+            * {
+              margin: 0;
+            }
+          }
+        }
     }
 
     .marker {
