--- a/src/assets/sass/components/_map.scss
+++ b/src/assets/sass/components/_map.scss
@@ -27,13 +27,28 @@
           margin: 12px;
           width: calc(100% - 2*12px);
         }
+        .exitBtn {
+          position: absolute;
+          top: -12px;
+          left: -12px;
+          width: 24px;
+          height: 24px;
+          border-radius: 99px;
+          background: $gradient;
+          color: white;
+          display: grid;
+          place-items: center;
+          &:hover {
+            cursor: pointer;
+          }
+        }
         img {
           position: absolute;
           width: 200px;
           height: auto;
           top: 0;
           right: 20px;
-          transform: translate(0, -50%);
+          transform: translate(0, -55%);
         }
         .title-group {
           .license {
