--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -33,8 +33,24 @@
       
     }
 
+    .profile-wrapper {
+      position: relative;
+      &:before {
+        content: '';
+        width: calc(100% + 2px);
+        height: calc(100% + 2px);
+        display: block;
+        background: $gradient;
+        z-index: -1;
+        border-radius: 50%;
+        position: absolute;
+        top: -1px;
+        left: -1px;
+      }
+    }
     .user-loggedin-icon {
         border-radius: 50%;
+        border: 1px solid $white;
     }
 
   }
