--- a/src/assets/sass/components/_map.scss
+++ b/src/assets/sass/components/_map.scss
@@ -56,7 +56,7 @@
             margin-bottom: 4px;
           }
           .title {
-            font-weight: 700;
+            font-weight: 600;
             font-size: 20px;
             @include breakpoint(medium) {
               font-size: 22px;
@@ -109,9 +109,8 @@
         width: 38px;
         height: 51px;
         transition: 0.2s ease-in-out;
-
+        transform: translate(-50%, -100%);
         &:hover {
-            transform: translateY(-3px);
             cursor: pointer;
         }
     }
