--- a/src/assets/sass/components/_map.scss
+++ b/src/assets/sass/components/_map.scss
@@ -12,6 +12,48 @@
         left: 0;
     }
 
+    .current-location-button {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    .current-location-marker {
+        width: 30px;
+        height: 30px;
+        border-radius: 15px;
+        background-color: rgba(92, 163, 255, 0.6);
+
+        display: grid;
+        place-items: center;
+
+        transform: translate(-50%, -50%);
+
+        .inner {
+
+            width: 16px;
+            height: 16px;
+            border-radius: 8px;
+            opacity: 1;
+            background-color: rgb(255, 255, 255);
+
+            display: grid;
+            place-items: center;
+
+            .inner {
+                width: 12px;
+                height: 12px;
+                border-radius: 6px;
+                opacity: 1;
+                background-color: rgb(81, 134, 236);
+            }
+        }
+    }
+
     .marker-info {
         border-radius: 4px;
         background: $white;
