--- a/src/assets/sass/components/_map.scss
+++ b/src/assets/sass/components/_map.scss
@@ -154,6 +154,7 @@
         transform: translate(-50%, -100%);
         &:hover {
             cursor: pointer;
+            transform: translate(-50%, -110%);
         }
     }
 }
