--- a/src/assets/sass/components/_footer.scss
+++ b/src/assets/sass/components/_footer.scss
@@ -1,12 +1,17 @@
+
+
 .footer-bar-wrapper {
+
     bottom: 0;
     width: 100%;
-    height: 4rem;
+    padding: 10px 0;
     display: grid;
     place-items: center;
     background: rgb(241, 240, 240);
     
     .inner {
+
+
         width: 100%;
         display: flex;
         align-items: center;
@@ -14,10 +19,24 @@
         flex-direction: row;
         padding: 10px 5vw;
         position: relative;
+
+        @include breakpoint(medium down) {
+            display: flex;
+            flex-direction: column;
+            transform: translate(0%, 0%);
+
+            
+        }
         .mid-side {
+            @include breakpoint(medium down) {
+                margin-top: 0px;
+                transform: translate(0%, 0%);
+    
+                
+            }
             display: flex;
             align-items: center;
-            position: absolute;
+            margin-top: 20px;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
