--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -75,3 +75,4 @@
 @import './components/login';
 @import './components/isRenting';
 @import './components/receipt';
+@import './components/profile';
