--- a/src/assets/sass/components/_login.scss
+++ b/src/assets/sass/components/_login.scss
@@ -4,9 +4,13 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding-top: 30vh;
+        padding-top: 20vh;
 
-        .login-button {
+        h5 {
+            margin-bottom: 40px;
+        }
+
+        .login button {
             background-image: linear-gradient(to right, #0072ff 0%, #00c6ff 51%, #0072ff 100%);
             margin: 10px;
             padding: 15px 45px;
