--- a/src/assets/sass/components/_rent.scss
+++ b/src/assets/sass/components/_rent.scss
@@ -1,5 +1,15 @@
 .rent-page {
   position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+
+  // .bookingpage {
+  //   text-align: center;
+  //   padding-top: 20vh;
+  // }
+
   .rent-bg {
     position: fixed;
     top: 0;
